--- a/res/layout/activity_principal.xml
+++ b/res/layout/activity_principal.xml
@@ -8,9 +8,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.java.android.laboratorio11.PrincipalActivity" >
 
+    <EditText
+        android:id="@+id/numMinimoEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="14dp"
+        android:ems="10"
+        android:hint="@string/num_min"
+        android:inputType="number" >
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/numMaximoEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/numMinimoEditText"
+        android:layout_below="@+id/numMinimoEditText"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:hint="@string/num_maximo"
+        android:inputType="number" />
+
     <TextView
+        android:id="@+id/numeroGeradoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignLeft="@+id/gerarButton"
+        android:layout_centerVertical="true"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/gerarButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/numeroGeradoTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:text="@string/btn_gerar" />
 
 </RelativeLayout>
